--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,63 +8,74 @@
 
     <ImageView
         android:background="@drawable/background"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="495dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:id="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 
-    <ImageView
-        android:id="@+id/imgStartQuest"
-        android:src="@drawable/button"
-        android:layout_width="257dp"
-        android:layout_height="69dp"
-        tools:layout_editor_absoluteY="412dp"
-        tools:layout_editor_absoluteX="64dp"
-        android:layout_marginBottom="36dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/imgSocialize" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/imgStartQuest"
-        android:layout_alignTop="@id/imgStartQuest"
-        android:layout_alignRight="@id/imgStartQuest"
-        android:layout_alignBottom="@id/imgStartQuest"
+    <Button
+        android:id="@+id/startQuestBtn"
+        android:layout_width="255dp"
+        android:layout_height="65dp"
+        android:background="@drawable/button"
         android:text="Start Quest"
-        android:gravity="center" />
+        android:layout_above="@+id/characterBtn"
+        android:layout_alignStart="@+id/characterBtn"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        android:layout_marginTop="61dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.5" />
 
-    <ImageView
-        android:id="@+id/imgCharacter"
-        android:layout_width="257dp"
-        android:layout_height="69dp"
-        android:src="@drawable/button"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="412dp"
-        android:layout_marginBottom="91dp"
-        android:layout_above="@+id/imgSocialize"
-        android:layout_alignStart="@+id/imgAchievement" />
+    <Button
+        android:id="@+id/characterBtn"
+        android:layout_width="255dp"
+        android:layout_height="65dp"
+        android:background="@drawable/button"
+        android:text="Character"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="21dp"
+        app:layout_constraintTop_toBottomOf="@+id/startQuestBtn"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.5" />
 
-    <ImageView
-        android:id="@+id/imgSocialize"
-        android:layout_width="257dp"
-        android:layout_height="69dp"
-        android:src="@drawable/button"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="412dp"
-        android:layout_above="@+id/imgStartQuest"
-        android:layout_alignStart="@+id/imgAchievement"
-        android:layout_marginBottom="39dp" />
+    <Button
+        android:id="@+id/socializeBtn"
+        android:layout_width="255dp"
+        android:layout_height="65dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="21dp"
+        android:background="@drawable/button"
+        android:text="Socialize"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/characterBtn" />
 
-    <ImageView
-        android:id="@+id/imgAchievement"
-        android:layout_width="257dp"
-        android:layout_height="69dp"
-        android:src="@drawable/button"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="412dp"
-        android:layout_marginBottom="17dp"
-        android:layout_above="@+id/imgSocialize"
-        android:layout_centerHorizontal="true" />
+    <Button
+        android:id="@+id/achievementsBtn"
+        android:layout_width="255dp"
+        android:layout_height="65dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/button"
+        android:text="Achievements"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/socializeBtn" />
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
