--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="495dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/imageView"
+        android:id="@+id/backgroundPicture"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
@@ -26,9 +26,10 @@
         android:layout_height="65dp"
         android:background="@drawable/button"
         android:text="Start Quest"
+        android:onClick="startQuest"
         android:layout_above="@+id/characterBtn"
         android:layout_alignStart="@+id/characterBtn"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/backgroundPicture"
         android:layout_marginTop="61dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -42,6 +43,7 @@
         android:layout_height="65dp"
         android:background="@drawable/button"
         android:text="Character"
+        android:onClick="showCharacter"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="21dp"
         app:layout_constraintTop_toBottomOf="@+id/startQuestBtn"
@@ -60,7 +62,8 @@
         android:layout_marginTop="21dp"
         android:background="@drawable/button"
         android:text="Socialize"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView"
+        android:onClick="socialize"
+        app:layout_constraintLeft_toLeftOf="@+id/backgroundPicture"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/characterBtn" />
 
@@ -73,9 +76,20 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/button"
         android:text="Achievements"
+        android:onClick="showAchievements"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/socializeBtn" />
+
+    <Button
+        android:id="@+id/settingsBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/settingsSmall"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
