--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,7 @@
         android:id="@+id/settingsBtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/settingsSmall"
+        android:background="@drawable/settings_small"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="16dp"
         android:layout_marginRight="16dp"
