--- a/app/src/main/res/layout/activity_the_road.xml
+++ b/app/src/main/res/layout/activity_the_road.xml
@@ -22,7 +22,7 @@
             android:id="@+id/button"
             android:layout_width="85dp"
             android:layout_height="85dp"
-            android:background="@drawable/rund_moerk_i_kanten_knap"
+            android:background="@drawable/button_round"
             android:textSize="30sp"
             tools:text="1"
             android:layout_marginLeft="8dp"
@@ -38,7 +38,7 @@
             android:layout_width="85dp"
             android:layout_height="85dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/rund_moerk_i_kanten_knap"
+            android:background="@drawable/button_round"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/button"
             tools:text="2"
@@ -52,7 +52,7 @@
             android:layout_width="85dp"
             android:layout_height="85dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/rund_moerk_i_kanten_knap"
+            android:background="@drawable/button_round"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/button2"
             tools:text="3"
@@ -66,7 +66,7 @@
             android:layout_width="85dp"
             android:layout_height="85dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/rund_moerk_i_kanten_knap"
+            android:background="@drawable/button_round"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/button3"
             tools:text="4"
@@ -84,7 +84,7 @@
             android:id="@+id/imageView2"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            app:srcCompat="@drawable/haengelaas"
+            app:srcCompat="@drawable/lock"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
@@ -97,7 +97,7 @@
             android:id="@+id/imageView3"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            app:srcCompat="@drawable/haengelaas"
+            app:srcCompat="@drawable/lock"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/imageView2"
             android:layout_marginTop="8dp"
@@ -113,7 +113,7 @@
             android:id="@+id/imageView4"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            app:srcCompat="@drawable/haengelaas"
+            app:srcCompat="@drawable/lock"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
