--- a/app/src/main/res/layout/activity_the_road.xml
+++ b/app/src/main/res/layout/activity_the_road.xml
@@ -8,7 +8,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:clickable="true">
 
         <ImageView
             android:id="@+id/imageView"
@@ -78,7 +79,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:clickable="false">
 
         <ImageView
             android:id="@+id/imageView2"
