--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/backgroundPicture"
+        android:scaleType="fitXY"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
@@ -30,7 +31,6 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="61dp"
         android:background="@drawable/button"
-        android:enabled="false"
         android:onClick="startQuest"
         android:text="Start Quest"
         app:layout_constraintHorizontal_bias="0.5"
