--- a/app/src/main/res/layout/activity_choose_world.xml
+++ b/app/src/main/res/layout/activity_choose_world.xml
@@ -8,10 +8,10 @@
 
     <ImageView
         android:id="@+id/imageView"
+        android:background="@drawable/background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:background="@drawable/background" />
+        android:scaleType="fitXY" />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -19,81 +19,79 @@
 
         <Button
             android:id="@+id/theRoadBtn"
+            android:background="@drawable/button"
+            android:text="The Road"
+            android:onClick="startTheRoad"
             android:layout_width="255dp"
             android:layout_height="65dp"
-            android:layout_above="@+id/characterBtn"
-            android:layout_alignStart="@+id/characterBtn"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:background="@drawable/button"
-            android:enabled="true"
-            android:onClick="startTheRoad"
-            android:text="The Road"
+            android:layout_marginTop="99dp"
+            android:layout_above="@+id/characterBtn"
+            android:layout_alignStart="@+id/characterBtn"
             app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="99dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/theForestBtn"
-            android:layout_width="255dp"
-            android:layout_height="65dp"
             android:background="@drawable/button"
             android:text="The Forest"
             android:onClick="startTheForest"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="35dp"
-            app:layout_constraintTop_toBottomOf="@+id/theRoadBtn"
+            android:layout_width="255dp"
+            android:layout_height="65dp"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.504" />
-
+            android:layout_marginTop="35dp"
+            android:layout_centerHorizontal="true"
+            app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintTop_toBottomOf="@+id/theRoadBtn"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
 
         <Button
             android:id="@+id/theCastleBtn"
+            android:background="@drawable/button"
+            android:text="The Castle"
+            android:onClick="startTheCastle"
             android:layout_width="255dp"
             android:layout_height="65dp"
-            android:layout_centerHorizontal="true"
+            android:layout_marginTop="32dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:background="@drawable/button"
-            android:onClick="startTheCastle"
-            android:text="The Castle"
+            android:layout_centerHorizontal="true"
             app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintTop_toBottomOf="@+id/theForestBtn"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/theForestBtn" />
+            app:layout_constraintRight_toRightOf="parent" />
 
         <Button
             android:id="@+id/characterBtn"
+            android:background="@drawable/button"
+            android:text="Character"
+            android:onClick="showCharacter"
             android:layout_width="255dp"
             android:layout_height="65dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:background="@drawable/button"
-            android:text="Character"
-            android:onClick="showCharacter"
+            android:layout_marginTop="70dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintVertical_bias="0.074"
+            app:layout_constraintTop_toBottomOf="@+id/theCastleBtn"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="70dp"
-            app:layout_constraintTop_toBottomOf="@+id/theCastleBtn"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="0.074" />
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <Button
             android:id="@+id/settingsBtn"
+            android:background="@drawable/settings_small"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@drawable/settings_small"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
@@ -104,26 +102,26 @@
 
     <ImageView
         android:id="@+id/lock1"
+        android:src="@drawable/lock"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/lock"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="202dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="202dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/lock2"
+        android:src="@drawable/lock"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/lock"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="35dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lock1" />
     </android.support.constraint.ConstraintLayout>
 
