--- a/app/src/main/res/layout/activity_the_road.xml
+++ b/app/src/main/res/layout/activity_the_road.xml
@@ -6,75 +6,80 @@
     android:layout_height="match_parent"
     tools:context="com.example.zeltr.codehero.TheRoad">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/hej"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/the_road_android" />
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/the_road_android"
-            android:contentDescription="@string/hej" />
-
         <Button
             android:id="@+id/button"
             android:layout_width="85dp"
             android:layout_height="85dp"
-            android:background="@drawable/button_round"
-            android:textSize="30sp"
-            tools:text="1"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
-            app:layout_constraintHorizontal_bias="0.501" />
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@drawable/button_round"
+            android:onClick="startQuest1"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:text="1" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="85dp"
             android:layout_height="85dp"
             android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:background="@drawable/button_round"
+            android:onClick="startQuest2"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/button"
-            tools:text="2"
-            android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            tools:text="2" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="85dp"
             android:layout_height="85dp"
             android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:background="@drawable/button_round"
+            android:onClick="startQuest3"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/button2"
-            tools:text="3"
-            android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            tools:text="3" />
 
         <Button
             android:id="@+id/button4"
             android:layout_width="85dp"
             android:layout_height="85dp"
             android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:background="@drawable/button_round"
+            android:onClick="startQuest4"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/button3"
-            tools:text="4"
-            android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            tools:text="4" />
+
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -83,46 +88,45 @@
         android:clickable="false">
 
         <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            app:srcCompat="@drawable/lock"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="114dp"
-            android:contentDescription="@string/hej" />
-
-        <ImageView
             android:id="@+id/imageView3"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            app:srcCompat="@drawable/lock"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView2"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView4"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="8dp"
             android:contentDescription="@string/hej"
-            app:layout_constraintVertical_bias="0.416" />
+            app:layout_constraintBottom_toTopOf="@+id/imageView2"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView4"
+            app:layout_constraintVertical_bias="0.416"
+            app:srcCompat="@drawable/lock" />
 
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            app:srcCompat="@drawable/lock"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
+            android:layout_marginTop="153dp"
+            android:contentDescription="@string/hej"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="153dp"
-            android:contentDescription="@string/hej" />
+            app:srcCompat="@drawable/lock" />
 
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="114dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:contentDescription="@string/hej"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:srcCompat="@drawable/lock" />
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
