--- a/app/src/main/res/layout/activity_the_road_quest1.xml
+++ b/app/src/main/res/layout/activity_the_road_quest1.xml
@@ -4,29 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@drawable/background"
     tools:context="com.example.zeltr.codehero.TheRoadQuest1">
-
-    <ImageView
-        android:background="@drawable/background"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:scaleType="centerCrop"
-    />
 
     <TextView
         android:id="@+id/theRoadQuest1Desc"
         style="@style/QuestDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_marginTop="25dp"
-        android:paddingLeft="40px"
-        android:paddingRight="40px"
-        app:layout_constraintTop_toTopOf="@+id/backgroundPicture"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
         android:text="@string/theRoadQuest1desc" />
 
     <TextView
@@ -34,23 +25,20 @@
         style="@style/QuestDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
-        android:paddingLeft="40px"
-        android:paddingRight="40px"
-        app:layout_constraintTop_toTopOf="@+id/backgroundPicture"
-        android:text="@string/theRoadQuest1tip1"
         android:layout_alignParentBottom="true"
-        />
+        android:layout_marginBottom="100dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
+        android:text="@string/theRoadQuest1tip1" />
 
     <Button
         android:id="@+id/questNextBtn"
-        android:layout_width="255dp"
-        android:layout_height="65dp"
-        android:background="@drawable/button"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="10dp"
-        android:text="Next"
+        android:layout_width="125dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        app:layout_constraintTop_toTopOf="@+id/backgroundPicture" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="18dp"
+        android:layout_marginEnd="14dp"
+        android:background="@drawable/button"
+        android:text="Next" />
 </RelativeLayout>
