--- a/app/src/main/res/layout/activity_choose_world.xml
+++ b/app/src/main/res/layout/activity_choose_world.xml
@@ -13,6 +13,19 @@
         android:layout_height="wrap_content"
         android:scaleType="fitXY" />
 
+
+    <ImageView
+        android:src="@drawable/code_hero_logo"
+        android:layout_width="207dp"
+        android:layout_height="70dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:ignore="contentDescription"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp" />
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
