--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:ignore="contentDescription" />
 
+    <ImageView
+        android:src="@drawable/code_hero_logo"
+        android:layout_width="207dp"
+        android:layout_height="70dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:ignore="contentDescription"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp" />
+
     <Button
         android:id="@+id/startQuestBtn"
         android:layout_width="255dp"
