--- a/app/src/main/res/layout/activity_choose_world.xml
+++ b/app/src/main/res/layout/activity_choose_world.xml
@@ -50,6 +50,7 @@
         <Button
             android:id="@+id/theForestBtn"
             android:background="@drawable/button"
+            android:enabled="false"
             android:text="The Forest"
             android:onClick="startTheForest"
             android:layout_width="255dp"
@@ -68,6 +69,7 @@
             android:background="@drawable/button"
             android:text="The Castle"
             android:onClick="startTheCastle"
+            android:enabled="false"
             android:layout_width="255dp"
             android:layout_height="65dp"
             android:layout_marginTop="32dp"
@@ -136,6 +138,19 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="299dp" />
+
+        <Button
+            android:id="@+id/btnInfo"
+            android:background="@drawable/information"
+            android:layout_width="41dp"
+            android:layout_height="41dp"
+            android:layout_marginLeft="98dp"
+            android:layout_marginTop="85dp"
+            android:onClick="readTheRoadStory"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.819" />
 
     </android.support.constraint.ConstraintLayout>
 
