--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,4 +102,17 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent" />
 
+    <Button
+        android:id="@+id/btnInfo"
+        android:background="@drawable/information"
+        android:layout_width="41dp"
+        android:layout_height="41dp"
+        android:layout_marginLeft="98dp"
+        android:layout_marginTop="95dp"
+        android:onClick="readStory"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.82" />
+
 </android.support.constraint.ConstraintLayout>
