--- a/app/src/main/res/layout/activity_the_road_story.xml
+++ b/app/src/main/res/layout/activity_the_road_story.xml
@@ -4,37 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="com.example.zeltr.codehero.TheRoadStory">
 
-    <ImageView
-        android:background="@drawable/background"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/backgroundPicture"
-        android:scaleType="fitXY"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintVertical_bias="0.0" />
-
     <TextView
-        android:text="@string/theRoadStory"
-        android:textSize="30sp"
-        android:textColor="#000"
         android:layout_width="291dp"
-        android:layout_height="349dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="58dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp"
+        android:text="@string/theRoadStory"
+        android:textColor="#000"
+        android:textSize="30sp"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/backgroundPicture"
-        app:layout_constraintHorizontal_bias="0.504" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 
 </android.support.constraint.ConstraintLayout>
