Removal of background images and more

--- a/app/src/main/res/layout/activity_item_reward.xml
+++ b/app/src/main/res/layout/activity_item_reward.xml
@@ -4,36 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="com.example.zeltr.codehero.ItemReward">
-
-    <ImageView
-        android:id="@+id/backgroundPicture"
-        android:background="@drawable/background"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:scaleType="fitXY"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginLeft="-16dp"
-        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imgReward"
         android:layout_width="253dp"
         android:layout_height="194dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintHorizontal_bias="0.511"
+        android:layout_marginTop="13dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/backgroundPicture"
         app:layout_constraintTop_toBottomOf="@+id/txtComplete"
-        tools:layout_editor_absoluteX="65dp" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintVertical_bias="0.032" />
 
     <Button
         android:id="@+id/btnNext"
@@ -54,6 +43,9 @@
         android:id="@+id/txtItemDesc"
         android:layout_width="253dp"
         android:layout_height="64dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="12dp"
         android:clickable="false"
         android:cursorVisible="false"
         android:ems="10"
@@ -62,13 +54,10 @@
         android:gravity="center"
         android:inputType="textPersonName"
         android:textSize="30sp"
-        android:layout_marginTop="12dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imgReward"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.504" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgReward" />
 
     <TextView
         android:id="@+id/txtComplete"
