--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -49,6 +49,7 @@
                     android:layout_alignTop="@id/sword"
                     android:layout_marginTop="70dp"
                     android:background="@drawable/image_border"
+                    android:contentDescription="@string/checkBox"
                     tools:layout_editor_absoluteX="177dp" />
 
             </FrameLayout>
@@ -75,6 +76,7 @@
                 android:layout_alignTop="@id/shield"
                 android:layout_marginTop="70dp"
                 android:background="@drawable/image_border"
+                android:contentDescription="@string/checkBox"
                 tools:layout_editor_absoluteX="177dp" />
 
             </FrameLayout>
@@ -108,6 +110,7 @@
                 android:layout_alignTop="@id/armor"
                 android:layout_marginTop="70dp"
                 android:background="@drawable/image_border"
+                android:contentDescription="@string/checkBox"
                 tools:layout_editor_absoluteX="177dp" />
             </FrameLayout>
 
@@ -207,8 +210,6 @@
         android:layout_width="90dp"
         android:layout_height="100dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="8dp"
         android:layout_marginTop="47dp"
         android:contentDescription="@string/rightHand"
         android:onClick="unequipItem"
@@ -223,7 +224,8 @@
 
     <EditText
         android:id="@+id/expText"
-        android:paddingLeft="10dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:layout_width="154dp"
         android:layout_height="38dp"
         android:layout_marginBottom="8dp"
@@ -249,7 +251,8 @@
 
     <EditText
         android:id="@+id/coinsText"
-        android:paddingLeft="10dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:layout_width="153dp"
         android:layout_height="36dp"
         android:layout_marginBottom="8dp"
