--- a/app/src/main/res/layout/activity_choose_world.xml
+++ b/app/src/main/res/layout/activity_choose_world.xml
@@ -4,27 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="com.example.zeltr.codehero.ChooseWorld">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:background="@drawable/background"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY" />
-
 
     <ImageView
-        android:src="@drawable/code_hero_logo"
         android:layout_width="207dp"
         android:layout_height="70dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/code_hero_logo"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:ignore="contentDescription"
-        android:layout_marginLeft="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp" />
+        tools:ignore="contentDescription" />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -32,16 +26,16 @@
 
         <Button
             android:id="@+id/theRoadBtn"
-            android:background="@drawable/button"
-            android:text="The Road"
-            android:onClick="startTheRoad"
             android:layout_width="255dp"
             android:layout_height="65dp"
+            android:layout_above="@+id/characterBtn"
+            android:layout_alignStart="@+id/characterBtn"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="99dp"
-            android:layout_above="@+id/characterBtn"
-            android:layout_alignStart="@+id/characterBtn"
+            android:background="@drawable/button"
+            android:onClick="startTheRoad"
+            android:text="The Road"
             app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -49,65 +43,65 @@
 
         <Button
             android:id="@+id/theForestBtn"
-            android:background="@drawable/button"
-            android:enabled="false"
-            android:text="The Forest"
-            android:onClick="startTheForest"
             android:layout_width="255dp"
             android:layout_height="65dp"
+            android:layout_centerHorizontal="true"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="35dp"
-            android:layout_centerHorizontal="true"
+            android:background="@drawable/button"
+            android:enabled="false"
+            android:onClick="startTheForest"
+            android:text="The Forest"
             app:layout_constraintHorizontal_bias="0.504"
-            app:layout_constraintTop_toBottomOf="@+id/theRoadBtn"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/theRoadBtn" />
 
         <Button
             android:id="@+id/theCastleBtn"
-            android:background="@drawable/button"
-            android:text="The Castle"
-            android:onClick="startTheCastle"
-            android:enabled="false"
             android:layout_width="255dp"
             android:layout_height="65dp"
-            android:layout_marginTop="32dp"
+            android:layout_centerHorizontal="true"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_centerHorizontal="true"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/button"
+            android:enabled="false"
+            android:onClick="startTheCastle"
+            android:text="The Castle"
             app:layout_constraintHorizontal_bias="0.504"
-            app:layout_constraintTop_toBottomOf="@+id/theForestBtn"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/theForestBtn" />
 
         <Button
             android:id="@+id/characterBtn"
-            android:background="@drawable/button"
-            android:text="Character"
-            android:onClick="showCharacter"
             android:layout_width="255dp"
             android:layout_height="65dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="70dp"
-            android:layout_marginBottom="8dp"
+            android:background="@drawable/button"
+            android:onClick="showCharacter"
+            android:text="Character"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
-            app:layout_constraintVertical_bias="0.074"
-            app:layout_constraintTop_toBottomOf="@+id/theCastleBtn"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/theCastleBtn"
+            app:layout_constraintVertical_bias="0.074" />
 
         <Button
             android:id="@+id/settingsBtn"
-            android:background="@drawable/settings_small"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            android:layout_marginTop="16dp"
+            android:background="@drawable/settings_small"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -117,40 +111,40 @@
 
         <ImageView
             android:id="@+id/lock1"
-            android:src="@drawable/lock"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginTop="200dp"
+            android:src="@drawable/lock"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="200dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/lock2"
-            android:src="@drawable/lock"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginTop="299dp"
+            android:src="@drawable/lock"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="299dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btnInfo"
-            android:background="@drawable/information"
             android:layout_width="41dp"
             android:layout_height="41dp"
             android:layout_marginLeft="98dp"
             android:layout_marginTop="85dp"
+            android:background="@drawable/information"
             android:onClick="readTheRoadStory"
+            app:layout_constraintHorizontal_bias="0.819"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.819" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
