--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,32 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <ImageView
-        android:background="@drawable/background"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/backgroundPicture"
-        android:scaleType="fitXY"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:ignore="contentDescription" />
-
-    <ImageView
-        android:src="@drawable/code_hero_logo"
         android:layout_width="207dp"
         android:layout_height="70dp"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:ignore="contentDescription"
+        android:layout_alignParentTop="true"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/code_hero_logo"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp" />
+        tools:ignore="contentDescription" />
 
     <Button
         android:id="@+id/startQuestBtn"
@@ -38,44 +26,43 @@
         android:layout_alignStart="@+id/characterBtn"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="113dp"
         android:background="@drawable/button"
         android:onClick="startQuest"
         android:text="@string/startQuest"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/backgroundPicture" />
+        tools:layout_editor_absoluteY="113dp" />
 
     <Button
         android:id="@+id/characterBtn"
         android:layout_width="255dp"
         android:layout_height="65dp"
-        android:background="@drawable/button"
-        android:text="@string/characterBtn"
-        android:onClick="showCharacter"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
-        app:layout_constraintTop_toBottomOf="@+id/startQuestBtn"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="21dp"
+        android:background="@drawable/button"
+        android:onClick="showCharacter"
+        android:text="@string/characterBtn"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.5" />
+        app:layout_constraintTop_toBottomOf="@+id/startQuestBtn" />
 
     <Button
         android:id="@+id/socializeBtn"
         android:layout_width="255dp"
         android:layout_height="65dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="21dp"
         android:background="@drawable/button"
-        android:text="@string/socialize"
         android:onClick="socialize"
-        app:layout_constraintLeft_toLeftOf="@+id/backgroundPicture"
+        android:text="@string/socialize"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/characterBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/characterBtn"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/achievementsBtn"
@@ -85,8 +72,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/button"
-        android:text="@string/achievements"
         android:onClick="showAchievements"
+        android:text="@string/achievements"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -96,23 +83,23 @@
         android:id="@+id/settingsBtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/settings_small"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginTop="16dp"
+        android:background="@drawable/settings_small"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnInfo"
-        android:background="@drawable/information"
         android:layout_width="41dp"
         android:layout_height="41dp"
         android:layout_marginStart="98dp"
         android:layout_marginTop="95dp"
+        android:background="@drawable/information"
         android:onClick="readStory"
+        app:layout_constraintHorizontal_bias="0.82"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.82" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
