--- a/app/src/main/res/layout/activity_normal_reward.xml
+++ b/app/src/main/res/layout/activity_normal_reward.xml
@@ -4,21 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="com.example.zeltr.codehero.NormalReward">
-
-    <ImageView
-        android:background="@drawable/background"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/backgroundPicture"
-        android:scaleType="fitXY"
-        android:layout_marginLeft="-16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/txtComplete"
@@ -50,10 +37,10 @@
         android:layout_height="65dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="70dp"
         android:background="@drawable/button"
         android:onClick="btnNext"
         android:text="Next"
-        android:layout_marginTop="70dp"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -72,13 +59,13 @@
         android:ems="10"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:gravity="center"
         android:inputType="textPersonName"
         android:text="@string/xp"
-        android:gravity="center"
         android:textSize="14sp"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintTop_toBottomOf="@+id/txtComplete" />
 
     <EditText
@@ -95,15 +82,15 @@
         android:ems="10"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:gravity="center"
         android:inputType="textPersonName"
         android:text="@string/coins"
-        android:gravity="center"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintVertical_bias="0.057"
-        app:layout_constraintTop_toBottomOf="@+id/expText" />
+        app:layout_constraintTop_toBottomOf="@+id/expText"
+        app:layout_constraintVertical_bias="0.057" />
 
 </android.support.constraint.ConstraintLayout>
